<resources>
    <string name="app_name">Moovs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="retry">Recarregar</string>
    <string name="title_movies">Movies</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_cinema">Cinema</string>

    <!-- modules -->
    <string name="module_movies">movies</string>
    <string name="module_tvs">tvs</string>

    <string name="title_splash">splash</string>
    <string name="title_tvs">Series</string>
    <string name="title_settings">Settings</string>
</resources>