<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_base.xml"
    app:startDestination="@id/navigation_movies_graph">


    <include-dynamic
        android:id="@+id/navigation_movies_graph"
        android:label="@string/title_movies"
        app:moduleName="@string/module_movies"
        app:graphResName="navigation_movies"
        app:graphPackage="com.jaozinfs.moovs.movies"
        tools:layout="@layout/fragment_movies"/>
    <include-dynamic
        android:id="@+id/navigation_tvs_graph"
        android:label="@string/title_tvs"
        app:moduleName="@string/module_tvs"
        app:graphResName="navigation_tvs_graph"
        app:graphPackage="com.jaozinfs.moovs.tvs"
        tools:layout="@layout/fragment_tvs"/>

    <activity
        android:id="@+id/nav_features_splash"
        android:name="com.jaozinfs.moovs.SplashScreenActivity"
        android:label="@string/title_movies"
        />

    <activity
        android:id="@+id/nav_features_settings"
        android:name="com.jaozinfs.moovs.settings.ActivityPreferences"
        android:label="@string/title_settings"
        />


</navigation>